فارسی سازی ارقام

--- a/انټر_سرويس_انټېلېجنس.mw
+++ b/انټر_سرويس_انټېلېجنس.mw
@@ -215,21 +215,21 @@ Punjab]].<ref name="South Asia Analysis Group ">{{cite web| url=http://www.saag.
 *'''(۲۰۰۲)''' Some authors allege that ISI supported the ۱۹۹۹ release of [[Ahmed Omar Saeed Sheikh]] who was subsequently convicted of the ۲۰۰۲ beheading of ''[[Wall Street Journal]]'' reporter [[Daniel Pearl]].<ref name="kasmirpearl">[http://query.nytimes.com/gst/fullpage.html?res=9C0CE7D81F3EF936A15751C0A9649C8B63 A NATION CHALLENGED: THE SUSPECTS; Death of Reporter Puts Focus On Pakistan Intelligence Unit - New York Times<!-- Bot generated title -->]</ref>
 
 ==شخړې او مخالفتونه==
-پر آی اېس آی باندې د ګڼ شمېر نيوکو او انتقادونو سره داسې وييل کېږي چې دغه څارګره اداره، په يوه دولت کې دننه د بل دولت په څېر ده، چې د رهبرۍ په ډګر کې نه د پوځ، نه د ولسمشر او نه هم د لومړي وزير په توګه ځواب وييلی شي.<ref name= "BBC News">{{cite web| url= http://news.bbc.co.uk/2/hi/south_asia/1750265.stm | title= Profile: Pakistan's military intelligence agency | accessdate=2006-05-05| first=David| last= Chazan }}</ref> د ۱۹۵۰ کالونو راپدېخوا آی اېس آی د پاکستان په کورني سياست کې ژور ښکېل شوی دی. The 1990 elections for example were widely believed to have been rigged by the ISI in favor of the [[Islami Jamhoori Ittehad]] (IJI) party, a [[wiktionary:Conglomerate|conglomerate]] of nine mainly [[Right-wing politics|rightist]] parties by the ISI under [[Hamid Gul|Lt. General Hameed Gul]], to ensure the defeat of Bhutto's [[Pakistan Peoples Party]] (PPP) in the polls.<ref name= "FAS">{{cite web| url= http://www.fas.org/irp/world/pakistan/isi/| title= Directorate for Inter-Services Intelligence [ISI]| accessdate=2006-05-05| first=John| last= Pike }}</ref> Gul has denied that the vote was rigged. In September-October 1989, two ISI officers launched Operation Midnight Jackals in a bid to sway PPP members of the National Assembly to back a [[vote of no confidence]] against the Bhutto government. In early 1990s ISI became involved in politics of [[Karachi]], it launched operation against the [[Muttahida Qaumi Movement|Mujahir Qaumi Movement]] (MQM) seeing its growing popularity and political strength in the province of [[Sindh]]. It is alleged that ISI was involved in dividing MQM. This led to the creation of MQM-A and MQM-H, the former being the party of [[Altaf Hussain]] and latter Haqiqi group. MQM-Haqiqi group was made by ISI to target MQM-A and to stop its growing popularity. It even bribed several journalists and newspapers to agitate against MQM-A.<ref name= "Defence Journal">{{cite web| url= http://www.defencejournal.com/july98/civilmilitary2.htm | title= The Military and the Intelligence Agencies | accessdate=2006-05-05}}</ref>
-<!-- Image with inadequate rationale removed: [[Image:Dawood ibrahim.jpg|thumb|150px|Indian Gangster [[Dawood Ibrahim]] whom India blames [[12 March]] [[1993]] Bombay Bombings|1993 Bombay bombings]] -->
-ISI's Internal Political Division has been accused by various members of the Pakistan People's Party in assassinating [[Shahnawaz Bhutto]], one of the two brothers of Benazir Bhutto, through poisoning in the [[French Riviera]] in the middle of 1985 in an attempt to intimidate her into not returning to Pakistan for directing the movement against Zia's Military government, but no proof has been found implicating the ISI.<ref name="South Asia Analysis Group ">{{cite web| url=http://www.saag.org/papers3/paper287.html| title=PAKISTAN'S INTER-SERVICES INTELLIGENCE (ISI)| accessdate=2006-05-05| first=B| last=Raman}}</ref>
+پر آی اېس آی باندې د ګڼ شمېر نيوکو او انتقادونو سره داسې وييل کېږي چې دغه څارګره اداره، په يوه دولت کې دننه د بل دولت په څېر ده، چې د رهبرۍ په ډګر کې نه د پوځ، نه د ولسمشر او نه هم د لومړي وزير په توګه ځواب وييلی شي.<ref name= "BBC News">{{cite web| url= http://news.bbc.co.uk/2/hi/south_asia/1750265.stm | title= Profile: Pakistan's military intelligence agency | accessdate=۲۰۰۶-۰۵-۰۵| first=David| last= Chazan }}</ref> د ۱۹۵۰ کالونو راپدېخوا آی اېس آی د پاکستان په کورني سياست کې ژور ښکېل شوی دی. The ۱۹۹۰ elections for example were widely believed to have been rigged by the ISI in favor of the [[Islami Jamhoori Ittehad]] (IJI) party, a [[wiktionary:Conglomerate|conglomerate]] of nine mainly [[Right-wing politics|rightist]] parties by the ISI under [[Hamid Gul|Lt. General Hameed Gul]], to ensure the defeat of Bhutto's [[Pakistan Peoples Party]] (PPP) in the polls.<ref name= "FAS">{{cite web| url= http://www.fas.org/irp/world/pakistan/isi/| title= Directorate for Inter-Services Intelligence [ISI]| accessdate=۲۰۰۶-۰۵-۰۵| first=John| last= Pike }}</ref> Gul has denied that the vote was rigged. In September-October ۱۹۸۹, two ISI officers launched Operation Midnight Jackals in a bid to sway PPP members of the National Assembly to back a [[vote of no confidence]] against the Bhutto government. In early ۱۹۹۰s ISI became involved in politics of [[Karachi]], it launched operation against the [[Muttahida Qaumi Movement|Mujahir Qaumi Movement]] (MQM) seeing its growing popularity and political strength in the province of [[Sindh]]. It is alleged that ISI was involved in dividing MQM. This led to the creation of MQM-A and MQM-H, the former being the party of [[Altaf Hussain]] and latter Haqiqi group. MQM-Haqiqi group was made by ISI to target MQM-A and to stop its growing popularity. It even bribed several journalists and newspapers to agitate against MQM-A.<ref name= "Defence Journal">{{cite web| url= http://www.defencejournal.com/july98/civilmilitary2.htm | title= The Military and the Intelligence Agencies | accessdate=۲۰۰۶-۰۵-۰۵}}</ref>
+<!-- Image with inadequate rationale removed: [[Image:Dawood ibrahim.jpg|thumb|150px|Indian Gangster [[Dawood Ibrahim]] whom India blames [[۱۲ March]] [[۱۹۹۳]] Bombay Bombings|۱۹۹۳ Bombay bombings]] -->
+ISI's Internal Political Division has been accused by various members of the Pakistan People's Party in assassinating [[Shahnawaz Bhutto]], one of the two brothers of Benazir Bhutto, through poisoning in the [[French Riviera]] in the middle of ۱۹۸۵ in an attempt to intimidate her into not returning to Pakistan for directing the movement against Zia's Military government, but no proof has been found implicating the ISI.<ref name="South Asia Analysis Group ">{{cite web| url=http://www.saag.org/papers3/paper287.html| title=PAKISTAN'S INTER-SERVICES INTELLIGENCE (ISI)| accessdate=۲۰۰۶-۰۵-۰۵| first=B| last=Raman}}</ref>
 
-The ISI was also involved in a massive corruption scandal dubbed "Mehrangate", in which top ISI and Army brass were given large sums of money by Yunus Habib (the owner of Mehran Bank) to deposit ISI’s foreign exchange reserves in Mehran Bank.<ref name="Ghazali">{{cite web| url= http://www.ghazali.net/book1/Chapter11a/body_page_4.html | title= ISLAMIC PAKISTAN: ILLUSIONS & REALITY | accessdate=2006-05-05| first= Abdus Sattar | last= Ghazali }}</ref> This was against government policy, as such banking which involves government institutions can only be done through state-owned financial institutions and not private banks. When the new director of the ISI was appointed and then proceeded to withdraw the money from Mehran Bank and back into state-owned financial institutions, the money had been used up in financing Habib's “extracurricular” activities. On [[April 20]], [[1994]], Habib was arrested and the scandal became public.
+The ISI was also involved in a massive corruption scandal dubbed "Mehrangate", in which top ISI and Army brass were given large sums of money by Yunus Habib (the owner of Mehran Bank) to deposit ISI’s foreign exchange reserves in Mehran Bank.<ref name="Ghazali">{{cite web| url= http://www.ghazali.net/book1/Chapter11a/body_page_4.html | title= ISLAMIC PAKISTAN: ILLUSIONS & REALITY | accessdate=۲۰۰۶-۰۵-۰۵| first= Abdus Sattar | last= Ghazali }}</ref> This was against government policy, as such banking which involves government institutions can only be done through state-owned financial institutions and not private banks. When the new director of the ISI was appointed and then proceeded to withdraw the money from Mehran Bank and back into state-owned financial institutions, the money had been used up in financing Habib's “extracurricular” activities. On [[April ۲۰]], [[۱۹۹۴]], Habib was arrested and the scandal became public.
 
-India has blamed the ISI for training, arming and giving logistics to the militants who are fighting the Indian security forces in [[Jammu and Kashmir|Indian-administered Kashmir]].<ref name="South Asia Analysis Group ">{{cite web| url= http://www.guardian.co.uk/kashmir/Story/0,2763,722049,00.html| title= Dangerous game of state-sponsored terror that threatens nuclear conflict| accessdate=2006-05-05| first= Rory | last= McCarthy}}</ref> [[Federation of American Scientists]] reports that the Inter-Service Intelligence, is the main supplier of funds and arms to the militant groups.<ref name="FAS">{{cite web|url=http://www.fas.org/irp/world/pakistan/isi/|title="Directorate for ISI" article on FAS, Intelligence Resource Program}}</ref> The British Government had stated there is a 'clear link' between Pakistan's Inter-Services Intelligence and three major militant outfits<ref name="ISI">{{cite web|url=http://www.rediff.com/news/2002/jun/11war4.htm |title=Information regarding links between ISI and militants}}</ref> ''[[The Guardian]]'' newspaper had uncovered evidence that Pakistani militants were openly raising funds and training new recruits and that the ISI's Kashmir cell was instrumental in funding and controlling these outfits.<ref name="Guardian">{{cite web|url=http://www.guardian.co.uk/kashmir/Story/0,2763,722049,00.html |title=Dangerous game of state-sponsored terror...}} - [[The Guardian]]</ref>India also accused ISI of masterminding the 1993 Mumbai bombings, with backing from Dawood Ibrahim's [[D-Company]].<ref name="South Asia Analysis Group">{{cite web| url=http://www.saag.org/papers3/paper287.html| title=PAKISTAN'S INTER-SERVICES INTELLIGENCE (ISI)| accessdate=2006-05-05| first=B| last=Raman}}</ref> Aside from Kashmir, India accuses the ISI of running training camps near the border of [[Bangladesh]] in late 1990s where India claims the ISI trains members of various [[Separatism|separatist]] groups from the northeastern Indian states. The ISI has denied these accusations.
+India has blamed the ISI for training, arming and giving logistics to the militants who are fighting the Indian security forces in [[Jammu and Kashmir|Indian-administered Kashmir]].<ref name="South Asia Analysis Group ">{{cite web| url= http://www.guardian.co.uk/kashmir/Story/0,2763,722049,00.html| title= Dangerous game of state-sponsored terror that threatens nuclear conflict| accessdate=۲۰۰۶-۰۵-۰۵| first= Rory | last= McCarthy}}</ref> [[Federation of American Scientists]] reports that the Inter-Service Intelligence, is the main supplier of funds and arms to the militant groups.<ref name="FAS">{{cite web|url=http://www.fas.org/irp/world/pakistan/isi/|title="Directorate for ISI" article on FAS, Intelligence Resource Program}}</ref> The British Government had stated there is a 'clear link' between Pakistan's Inter-Services Intelligence and three major militant outfits<ref name="ISI">{{cite web|url=http://www.rediff.com/news/2002/jun/11war4.htm |title=Information regarding links between ISI and militants}}</ref> ''[[The Guardian]]'' newspaper had uncovered evidence that Pakistani militants were openly raising funds and training new recruits and that the ISI's Kashmir cell was instrumental in funding and controlling these outfits.<ref name="Guardian">{{cite web|url=http://www.guardian.co.uk/kashmir/Story/0,2763,722049,00.html |title=Dangerous game of state-sponsored terror...}} - [[The Guardian]]</ref>India also accused ISI of masterminding the ۱۹۹۳ Mumbai bombings, with backing from Dawood Ibrahim's [[D-Company]].<ref name="South Asia Analysis Group">{{cite web| url=http://www.saag.org/papers3/paper287.html| title=PAKISTAN'S INTER-SERVICES INTELLIGENCE (ISI)| accessdate=۲۰۰۶-۰۵-۰۵| first=B| last=Raman}}</ref> Aside from Kashmir, India accuses the ISI of running training camps near the border of [[Bangladesh]] in late ۱۹۹۰s where India claims the ISI trains members of various [[Separatism|separatist]] groups from the northeastern Indian states. The ISI has denied these accusations.
 
-In January 1993, the United States placed Pakistan on the watch list of such countries which were suspected of [[State-sponsored terrorism|sponsoring international terrorism]]. This decision was made in part because the current head of the ISI in 1993, Lt. Gen. Nasir, had become a stumbling block in American efforts to buy back hundreds of shoulder-fired, [[Surface-to-air missile|surface-to-air]] [[FIM-92 Stinger]] missiles from the Afghan Mujahideen and was assisting organizations such as [[Harkat ul-Ansar]], which had been branded as a terrorist organization by the US. Once Nasir's tenure as ISI chief ended, the US removed Pakistan from the terrorism watch list. The ISI is also suspected to have been involved with the hijackers of the [[September 11, 2001 attacks]], having paid the ringleader [[Mohamed Atta]].<ref>[http://www.globalresearch.ca/articles/CHO206A.html Centre for Research on Globalisation]</ref> After 9/11, ISI was purged of members who did not support President [[Pervez Musharraf]]'s stance towards the [[Taliban]] and [[Al Qaeda]].
+In January ۱۹۹۳, the United States placed Pakistan on the watch list of such countries which were suspected of [[State-sponsored terrorism|sponsoring international terrorism]]. This decision was made in part because the current head of the ISI in ۱۹۹۳, Lt. Gen. Nasir, had become a stumbling block in American efforts to buy back hundreds of shoulder-fired, [[Surface-to-air missile|surface-to-air]] [[FIM-۹۲ Stinger]] missiles from the Afghan Mujahideen and was assisting organizations such as [[Harkat ul-Ansar]], which had been branded as a terrorist organization by the US. Once Nasir's tenure as ISI chief ended, the US removed Pakistan from the terrorism watch list. The ISI is also suspected to have been involved with the hijackers of the [[September ۱۱, ۲۰۰۱ attacks]], having paid the ringleader [[Mohamed Atta]].<ref>[http://www.globalresearch.ca/articles/CHO206A.html Centre for Research on Globalisation]</ref> After ۹/۱۱, ISI was purged of members who did not support President [[Pervez Musharraf]]'s stance towards the [[Taliban]] and [[Al Qaeda]].
 
-In the [[BBC]] Newsnight Programme on [[27 September]] [[2006]], a research paper prepared for the [[Ministry of Defence (United Kingdom)]], was quoted linking the ISI with support for the Taliban and other terrorist acts in the west.<ref>[http://news.bbc.co.uk/1/hi/uk/5387168.stm Iraq war 'recruiting extremists'] - [[BBC]]</ref> The report states, "The US/UK cannot begin to turn the tide until they identify the real enemies from attacking ideas tactically - and seek to put in place a more just vision. This will require Pakistan to move away from Army rule and for the ISI to be dismantled and more significantly something to be put in its place."<ref>[http://news.bbc.co.uk/1/hi/programmes/newsnight/5388426.stm ISI linked with attacks in the West] - [[BBC]]</ref> This was denied by President Musharraf, "I totally, 200% reject it. I reject it from anybody - MoD or anyone who tells me to dismantle ISI."<ref>[http://news.bbc.co.uk/1/hi/world/south_asia/5387344.stm Musharraf defends his spy service] - [[BBC]]</ref> The [[Council on Foreign Relations]], a [[United States|US]] [[foreign policy]] [[think tank]] published an article casting doubt on some of the accusations, 'Though Pakistan does offer safe haven to Kashmiri groups, and perhaps some Taliban fighters, the suggestion that the ISI is responsible for the 7/7 bombings of London’s mass transit system is “a real stretch,” [Kathy] Gannon says'.<ref>[http://www.cfr.org/publication/11644/isi_and_terrorism.html The ISI and Terrorism: Behind the Accusations] - [[Council on Foreign Relations]]</ref> However, a later report by the same think tank, The Council on Foreign Relations, stated there was probably support for terrorism from rogue elements of the ISI [http://www.cfr.org/issue/135].
+In the [[BBC]] Newsnight Programme on [[۲۷ September]] [[۲۰۰۶]], a research paper prepared for the [[Ministry of Defence (United Kingdom)]], was quoted linking the ISI with support for the Taliban and other terrorist acts in the west.<ref>[http://news.bbc.co.uk/1/hi/uk/5387168.stm Iraq war 'recruiting extremists'] - [[BBC]]</ref> The report states, "The US/UK cannot begin to turn the tide until they identify the real enemies from attacking ideas tactically - and seek to put in place a more just vision. This will require Pakistan to move away from Army rule and for the ISI to be dismantled and more significantly something to be put in its place."<ref>[http://news.bbc.co.uk/1/hi/programmes/newsnight/5388426.stm ISI linked with attacks in the West] - [[BBC]]</ref> This was denied by President Musharraf, "I totally, ۲۰۰٪ reject it. I reject it from anybody - MoD or anyone who tells me to dismantle ISI."<ref>[http://news.bbc.co.uk/1/hi/world/south_asia/5387344.stm Musharraf defends his spy service] - [[BBC]]</ref> The [[Council on Foreign Relations]], a [[United States|US]] [[foreign policy]] [[think tank]] published an article casting doubt on some of the accusations, 'Though Pakistan does offer safe haven to Kashmiri groups, and perhaps some Taliban fighters, the suggestion that the ISI is responsible for the ۷/۷ bombings of London’s mass transit system is “a real stretch,” [Kathy] Gannon says'.<ref>[http://www.cfr.org/publication/11644/isi_and_terrorism.html The ISI and Terrorism: Behind the Accusations] - [[Council on Foreign Relations]]</ref> However, a later report by the same think tank, The Council on Foreign Relations, stated there was probably support for terrorism from rogue elements of the ISI [http://www.cfr.org/issue/135].
 
-[[Amnesty International]] publish a report on [[29 September]] [[2006]] accusing Pakistan of detaining hundreds of alleged terror suspects without legal process. The group says some were tortured or otherwise ill-treated, others were sold to the US military, and others have vanished without trace. "Journalists and human rights activists have told Amnesty International that most terror suspects deemed important by Pakistani intelligence were held in "safe houses" run by "the agencies" – Pakistan’s intelligence agencies including the Inter-Services Intelligence (ISI) and Military Intelligence (MI)."<ref>[http://web.amnesty.org/library/Index/ENGASA330352006 Pakistan - Human rights ignored in the ‘war on terror’] - [[Amnesty International]]</ref> 'In many cases, U.S. agents paid a bounty of $5,000 (2,667 UK pounds) to those, usually intelligence agents, who simply declared people terrorists, seized them and handed them over for interrogation with no legal process, Amnesty said. "Enforced disappearances were almost unheard of in Pakistan before the start of the U.S-led war on terror -- now they are a growing phenomenon, spreading beyond terror suspects", Amnesty researcher Angelika Pathak said.'<ref>[http://uk.news.yahoo.com/29092006/325/pakistan-accused-terror-abductions.html Pakistan accused of terror abductions]- [[Reuters]]</ref> Gen Musharraf strongly denied the allegations that some alleged terror suspects had vanished without trace, "I don't want even to reply to that, it is a nonsense, I don't believe it, I don't trust it".<ref>[http://news.bbc.co.uk/1/hi/world/south_asia/5394278.stm West 'will fail' without Pakistan] - [[BBC]]</ref> 'Gen Musharraf has boasted of the arrests as proof of his commitment to the fight against al-Qaida. In his new memoirs, In the Line of Fire, he claims that the CIA has paid Pakistan hundreds of millions of dollars in bounty payments for the capture of 369 al-Qaida suspects since 2001.'<ref>[http://www.guardian.co.uk/pakistan/Story/0,,1883693,00.html Terror suspects tortured, claims Amnesty report] - [[The Guardian]]</ref>
+[[Amnesty International]] publish a report on [[۲۹ September]] [[۲۰۰۶]] accusing Pakistan of detaining hundreds of alleged terror suspects without legal process. The group says some were tortured or otherwise ill-treated, others were sold to the US military, and others have vanished without trace. "Journalists and human rights activists have told Amnesty International that most terror suspects deemed important by Pakistani intelligence were held in "safe houses" run by "the agencies" – Pakistan’s intelligence agencies including the Inter-Services Intelligence (ISI) and Military Intelligence (MI)."<ref>[http://web.amnesty.org/library/Index/ENGASA330352006 Pakistan - Human rights ignored in the ‘war on terror’] - [[Amnesty International]]</ref> 'In many cases, U.S. agents paid a bounty of $۵٬۰۰۰ (۲٬۶۶۷ UK pounds) to those, usually intelligence agents, who simply declared people terrorists, seized them and handed them over for interrogation with no legal process, Amnesty said. "Enforced disappearances were almost unheard of in Pakistan before the start of the U.S-led war on terror -- now they are a growing phenomenon, spreading beyond terror suspects", Amnesty researcher Angelika Pathak said.'<ref>[http://uk.news.yahoo.com/29092006/325/pakistan-accused-terror-abductions.html Pakistan accused of terror abductions]- [[Reuters]]</ref> Gen Musharraf strongly denied the allegations that some alleged terror suspects had vanished without trace, "I don't want even to reply to that, it is a nonsense, I don't believe it, I don't trust it".<ref>[http://news.bbc.co.uk/1/hi/world/south_asia/5394278.stm West 'will fail' without Pakistan] - [[BBC]]</ref> 'Gen Musharraf has boasted of the arrests as proof of his commitment to the fight against al-Qaida. In his new memoirs, In the Line of Fire, he claims that the CIA has paid Pakistan hundreds of millions of dollars in bounty payments for the capture of ۳۶۹ al-Qaida suspects since ۲۰۰۱.'<ref>[http://www.guardian.co.uk/pakistan/Story/0,,1883693,00.html Terror suspects tortured, claims Amnesty report] - [[The Guardian]]</ref>
 
-Some members of the American media and political establishment have questioned Pakistan's commitment in combating the Taliban and Al Qaeda remnants in border areas. In response, Pakistan has pointed to the deployment of nearly 80,000 troops in the border areas and the arrests of more than 700 Al Qaeda members carried out by mostly ISI members, the most high profile ones including 9/11 mastermind [[Khalid Sheikh Mohammed]], as proof that the ISI was serious in its commitment to fighting the [[War on Terrorism]].<ref name="BBC ">{{cite web| url= http://news.bbc.co.uk/2/hi/south_asia/2812181.stm| title= Al-Qaeda suspect 'under interrogation'| accessdate=2006-05-05}}</ref> However, the recent [[Waziristan Accord|deal with the rebels]] to end the [[Waziristan War]] has been seen by many observers as a defeat for Pakistan,<ref>A battle lost By Tony Blankley [[The Washington Times]] [[September 27]], [[2006]]</ref> that has strengthened Taliban powerbase in [[Waziristan]].<ref>[http://inbrief.threatswatch.org/2006/09/pakistan-cedes-north-wazirista/ Pakistan Cedes North Waziristan to Taliban] - Threats Watch</ref> Moreover, [[NATO]]'s top commanders have criticized ISI's continued role in supplying weapons and providing sanctuary to the terrorists<ref>[http://www.telegraph.co.uk/news/main.jhtml?xml=/news/2006/10/06/wafghan06.xml  Nato's top brass accuse Pakistan over Taliban aid] - [[The Daily Telegraph]], 06/10/2006 </ref> but have approved the deal.<ref>[http://news.yahoo.com/s/afp/20061011/wl_sthasia_afp/pakistanafghanistan_061011193221 NATO wants to copy Pakistan's militant peace deal]</ref>
+Some members of the American media and political establishment have questioned Pakistan's commitment in combating the Taliban and Al Qaeda remnants in border areas. In response, Pakistan has pointed to the deployment of nearly ۸۰٬۰۰۰ troops in the border areas and the arrests of more than ۷۰۰ Al Qaeda members carried out by mostly ISI members, the most high profile ones including ۹/۱۱ mastermind [[Khalid Sheikh Mohammed]], as proof that the ISI was serious in its commitment to fighting the [[War on Terrorism]].<ref name="BBC ">{{cite web| url= http://news.bbc.co.uk/2/hi/south_asia/2812181.stm| title= Al-Qaeda suspect 'under interrogation'| accessdate=۲۰۰۶-۰۵-۰۵}}</ref> However, the recent [[Waziristan Accord|deal with the rebels]] to end the [[Waziristan War]] has been seen by many observers as a defeat for Pakistan,<ref>A battle lost By Tony Blankley [[The Washington Times]] [[September ۲۷]], [[۲۰۰۶]]</ref> that has strengthened Taliban powerbase in [[Waziristan]].<ref>[http://inbrief.threatswatch.org/2006/09/pakistan-cedes-north-wazirista/ Pakistan Cedes North Waziristan to Taliban] - Threats Watch</ref> Moreover, [[NATO]]'s top commanders have criticized ISI's continued role in supplying weapons and providing sanctuary to the terrorists<ref>[http://www.telegraph.co.uk/news/main.jhtml?xml=/news/2006/10/06/wafghan06.xml  Nato's top brass accuse Pakistan over Taliban aid] - [[The Daily Telegraph]], ۰۶/۱۰/۲۰۰۶ </ref> but have approved the deal.<ref>[http://news.yahoo.com/s/afp/20061011/wl_sthasia_afp/pakistanafghanistan_061011193221 NATO wants to copy Pakistan's militant peace deal]</ref>
 
 ==د رسنيو ښودنه==
 په پاکستاني ټلويزون او رسنيو کې ډېر لږ داسې پېښ شوي چې د آی اېس آی يادونه پکې شوې وي، دا ځکه چې دوی د پاکستان د داسې يو حساسې ادارې په راسپړلو شرمېږي.
