--- a/انټر_سرويس_انټېلېجنس.mw
+++ b/انټر_سرويس_انټېلېجنس.mw
@@ -237,8 +237,8 @@ Some members of the American media and political establishment have questioned P
 خو د باندنيو هېوادونو رسنيو او د فلم جوړونې انډسټريانو لکه [[هاليووډ]] او [[باليووډ]] د آی اېس آی د انځور ښودلو لپاره ګڼ شمېر فلمونه او ټلويزوني خپرونې جوړې کړي، چې په ځينو کې يې د ټروريزم سره د روانې نړېوالې جګړې طبيعت او ددغې جګړې په سر کې د پاکستان ښکېلتابه او نډې انځورونه منعکس کوي.
 
 په ځينو رسنيو کې چې د آی اېس آی ښودنه شوې هغه په دې توګه دي:
-*''Ek'', a Hindi movie in which the CIA, ISI and R&AW agents work together to stop terrorists from detonating a [[nuclear weapon]] in [[Mumbai]].
-*''[[Charlie Wilson's War]]'', a Hollywood movie which shows how USA armed and trained the Afghan [[Mujahideen]] with the help of Pakistan's ISI.
+*''ايک'', يو هندی فلم دی چې په دغه فلم کې د سي آی آې، آی اېس آی او آر اېنډ اې ډبليو اجنټان په ګډه سره ملکاري کوي او په مومبای کې د ترحګرو په لاس کې د ورغلې هستوي وسلې د چاودلو مخنيونه کوي.
+*''[[د چارلي وېلسن جګړه]]'', د هاليووډ يو فلم دی چې په هغه کې د پاکستان د آی اېس آی له لارې امريکا د افغان مجاهدينو سره د روسي پوځونو په ضد جګړه کې مرسته ښکاره کوي.
 *''[[Path to 9/11]]'', an [[American television]] [[Miniseries|mini-series]] which shows how events lead up to the [[September 11, 2001 attacks]] and highlights the ISI's assistance in capturing the terrorist [[Ramzi Yousef]].
 *''[[Black Friday]]'', a [[Bollywood]] movie which cronicles the events the [[1993 Mumbai bombings]] and the ISI's role in instigating and supporting the chain of events.
 
