--- a/بشري_حقونه.mw
+++ b/بشري_حقونه.mw
@@ -275,7 +275,7 @@ In over 90 countries National human rights institutions (NHRIs)<ref>[http://www.
 [[pt:Direitos humanos]]
 [[qu:Runa hayñi]]
 [[ro:Drepturile omului]]
-[[ru:Права и свободы человека и гражданина]]
+[[ru:Права человека]]
 [[scn:Dritti umani]]
 [[simple:Human rights]]
 [[sk:Ľudské práva]]
