--- a/تاجيکستان.mw
+++ b/تاجيکستان.mw
@@ -170,6 +170,7 @@
 [[tg:Тоҷикистон]]
 [[th:ประเทศทาจิกิสถาน]]
 [[tk:Täjigistan]]
+[[tl:Tajikistan]]
 [[tr:Tacikistan]]
 [[udm:Таджикистан]]
 [[uk:Таджикистан]]
