*Empty MediaWiki Message*

--- a/محمد_رحمت_الله_تنها.mw
+++ b/محمد_رحمت_الله_تنها.mw
@@ -1,4 +1,5 @@
-محمد رحمت الله تنها اندړ د قضاوت پوه مولوي ميرزاخان عاطفي زوي دی. نوموړی د كابل پوهنتون د ساينس په پوهنڅي کې د فزيك په څانګه كي استاد دی او علمي رتبه يې پوهيالی ده. 
+[[انځور:رحمت_الله_تنها.jpg|thumb|محمد رحمت الله تنها]]
+'''محمد رحمت الله تنها''' اندړ د قضاوت پوه مولوي ميرزاخان عاطفي زوي دی. نوموړی د كابل پوهنتون د ساينس په پوهنڅي کې د فزيك په څانګه كي استاد دی او علمي رتبه يې پوهيالی ده. 
 
 == مخينه ==
 زه د غزني ولايت د اندړو د ولسوالي يم خو په كابل دسلواغي په دويمه ۱۳۶۲ كي پيدا شوي يم . 
