--- a/ويکيپېډيا.mw
+++ b/ويکيپېډيا.mw
@@ -31,8 +31,8 @@ When ''[[Time (magazine)|Time Magazine]]'' recognized "[[You (Time Person of the
 
 ==تاريخ==
 {{main|د ويکيپېډيا تاريخ}}
-[[Image:Nupedia.jpg|thumb|250px|په اصل کې ويکيپېډيا د پوهنغونډ د يوې بلې پروژې، [[نيوپېډيا]] نه رامېنځ ته شو.]]
-ويکيپېډيا د [[نيوپېډيا]] د يو بشپړه کوونکې پروژې په توګه په کار پيل وکړ. , a free online [[English language|English-language]] encyclopedia project whose articles were written by experts and reviewed under a formal process. Nupedia was founded on [[March 9]] [[2000]], under the ownership of [[Bomis|Bomis, Inc]], a [[web portal]] company. Its main figures were [[Jimmy Wales]], Bomis [[Chief executive officer|CEO]], and [[Larry Sanger]], [[Editing|editor-in-chief]] for Nupedia and later Wikipedia. Nupedia was licensed initially under its own [[Nupedia Open Content License]], switching to the [[GNU Free Documentation License]] before Wikipedia's founding at the urging of [[Richard Stallman]].<ref name="stallman1999">{{cite web
+[[انځور:Nupedia.jpg|thumb|250px|په اصل کې ويکيپېډيا د پوهنغونډ د يوې بلې پروژې، [[نيوپېډيا]] نه رامېنځ ته شو.]]
+ويکيپېډيا د [[نيوپېډيا]] د يو بشپړه کوونکې پروژې په توګه په کار پيل وکړ. , دا په [[انګرېزي ژبه]] د پوهنغونډ يوه پروژه وه چې د دغې پروژې ليکنې د تجربه کارو ليکوالانو لخوا ليکل کېدل او د يوې رسمي مخکتنې د پروسې نه تېرېدل. د نيوپېډيا بنسټ په ۹ د مارچ ۲۰۰۰ کال کې د [[بوميس]] مالکيت، د وېب پورټالونو يوې کمپنۍ لخوا کېښودل شو. Its main figures were [[Jimmy Wales]], Bomis [[Chief executive officer|CEO]], and [[Larry Sanger]], [[Editing|editor-in-chief]] for Nupedia and later Wikipedia. Nupedia was licensed initially under its own [[Nupedia Open Content License]], switching to the [[GNU Free Documentation License]] before Wikipedia's founding at the urging of [[Richard Stallman]].<ref name="stallman1999">{{cite web
 |url=http://www.gnu.org/encyclopedia/encyclopedia.html
 |title=The Free Encyclopedia Project
 |accessdate=2008-01-04
