--- a/ويکيپېډيا.mw
+++ b/ويکيپېډيا.mw
@@ -142,8 +142,8 @@ The community has a power structure.<ref name="iTWireJune18-2006">
 
 As Wikipedia grows with an unconventional model of encyclopedia building, "Who writes Wikipedia" has become one of questions frequently asked on the project, often with a reference to other Web 2.0 projects such as [[Digg]].<ref>{{cite web |url=http://www.viktoria.se/altchi/submissions/submission_edchi_1.pdf |title=Power of the Few vs. Wisdom of the Crowd: Wikipedia and the Rise of the Bourgeoisie |first=Aniket |last=Kittur | accessdate =2008-02-23 |format=pdf}}</ref> Jimmy Wales, the founder of Wikipedia, once argued that only "a community ... a dedicated group of a few hundred volunteers" makes up a bulk of contributions to Wikipedia and that the project is therefore "much like any traditional organization". This was later disputed by [[Aaron Swartz]], who noted that several articles he sampled had large portion of their content contributed by a user with low edit count.<ref>{{cite web |url=http://www.aaronsw.com/weblog/whowriteswikipedia |title=Raw Thought: Who Writes Wikipedia? |first=Aaron |last=Swartz |accessdate=2008-02-23 |date=2006-09-04}}</ref>
 
-==Software and hardware==
-The operation of Wikipedia depends on [[MediaWiki]], a custom-made, [[free software|free]] and [[open source software|open source]] [[wiki software]] platform written in [[PHP]] and built upon the [[MySQL]] database. The software incorporates programming features such as a [[Macro (computer science)|macro language]], [[Variable|variables]], a [[transclusion]] system for [[Web template#Sub-template|templates]], and [[URL redirection]]. MediaWiki is licensed under the [[GNU General Public License]] and used by all Wikimedia projects, as well as many other wiki projects. Originally, Wikipedia ran on [[UseModWiki]] written in [[Perl]] by Clifford Adams (Phase I), which initially required [[CamelCase]] for article hyperlinks; the present double bracket style was incorporated later. Starting in January 2002 (Phase II), Wikipedia began running on a [[PhpWiki|PHP wiki]] engine with a MySQL database; this software was custom-made for Wikipedia by Magnus Manske. The Phase II software was repeatedly modified to accommodate the [[Exponential growth|exponentially increasing]] demand. In July 2002 (Phase III), Wikipedia shifted to the third-generation software, MediaWiki, originally written by Lee Daniel Crocker.
+==پوستکالی او کلک کالی==
+د ويکيپېډيا چلېدنه په [[ميډياويکي]] پورې اړونده ده، ميډياويکي يو وړيا او د پرانيستې سرچينې د ويکي يو پوستکالی دی چې په [[PHP]] کې ليکل شوی او په [[MySQL]] ډاټابېز باندې جوړ شوی دی. The software incorporates programming features such as a [[Macro (computer science)|macro language]], [[Variable|variables]], a [[transclusion]] system for [[Web template#Sub-template|templates]], and [[URL redirection]]. MediaWiki is licensed under the [[GNU General Public License]] and used by all Wikimedia projects, as well as many other wiki projects. Originally, Wikipedia ran on [[UseModWiki]] written in [[Perl]] by Clifford Adams (Phase I), which initially required [[CamelCase]] for article hyperlinks; the present double bracket style was incorporated later. Starting in January 2002 (Phase II), Wikipedia began running on a [[PhpWiki|PHP wiki]] engine with a MySQL database; this software was custom-made for Wikipedia by Magnus Manske. The Phase II software was repeatedly modified to accommodate the [[Exponential growth|exponentially increasing]] demand. In July 2002 (Phase III), Wikipedia shifted to the third-generation software, MediaWiki, originally written by Lee Daniel Crocker.
 
 [[Image:Wikimedia-servers-2006-05-09.svg|thumb|right|Overview of system architecture, May 2006. See [[:meta:Server layout diagrams|server layout diagrams on Meta-Wiki]].]]
 
