*Empty MediaWiki Message*

--- a/سيده_حسينه_گل_تنها.mw
+++ b/سيده_حسينه_گل_تنها.mw
@@ -1,4 +1,8 @@
 {{نابشپړ}}
-[[Image:Haseenagul.PNG|thumb|289px|حسينه ګل تنها]]
-راډيو ډرامه ليکونکې پاتې شوې ده
-[[Category: پښتانه شاعران]]
+[[انځور:Haseenagul.PNG|thumb|289px|حسينه ګل تنها]]
+سيده حسينه ګل تنها د پښتو ژبې يو وتلې ليکواله، شاعرا او راډيو ډرام ليکونکې ده. نوموړې د پښتونخوا د نوښار ولسوالۍ په کاکا صيب کلي کې سترګې نړۍ ته پرانيستي او خپلې لومړنۍ زده کړې يې هم په خپل کلي کې سر ته رسولي.
+
+
+
+
+[[وېشنيزه: پښتانه شاعران]]
