--- a/اجمل_خټک.mw
+++ b/اجمل_خټک.mw
@@ -1,11 +1,13 @@
+[[انځور:اجمل_خټک.jpg|thumb|289px|اجمل خټک]]
 [[Image:Ajmal-Khattak.JPG|thumb|289px|اجمل خټک]]
-'''اجمل خټک''' ٨٠ کاله وړاندې په اکوړه خټک کې نړى ته راغلى دى .لکه چې پوهيږى دادخوشحال خان خټک دزوکړې سيمه ده.
+'''اجمل خټک''' د پښتو ژبې يو تکړه ليکوال، شاعر او سياستپوه دی. نوموړی ٨٠ کاله وړاندې په اکوړه خټک کې نړى ته راغلى دى. 
 
-تراتم ټولگي پورې ېې پخپل کلي کې زده کړې وکړې اوبيا دپيښور عالى ښوونځي ته ورغي . داچي اجمل خټک په ځينوسېاسی چاروکې فعال ښکيل وونوپدې تور چې انگريزي ضد فعاليتونه کوي له ښوونځي نه وايستل شو.
+== زده کړې ==
+تر اتم ټولگي پورې ېې پخپل کلي کې زده کړې وکړې اوبيا دپيښور عالى ښوونځي ته ورغي . داچي اجمل خټک په ځينوسېاسی چاروکې فعال ښکيل وونوپدې تور چې انگريزي ضد فعاليتونه کوي له ښوونځي نه وايستل شو.
 
 خوله پوهې سره مينې دى غلى نه کړاوپه شخصي توگه يي لوست ووايه او عربى ، پښتو اوفارسي ىې ولوستل ، انگريزي ژبه يي زده کړه اوپوهنتون ته يې دازموينې په ورکولو پيل وکړ.
 
-خوله ازموينې يي راويست اوجيل ته يي وردننه کړ. ده په جيل کې هم لوست وايه اوله همغه ځايه يي ازموينې ورکړې ځکه يوازې دازموينې په ورځ يي اجازه ورکوله چې له جيله ازموينې ته ورشي اوبيرته به يې جيل ته راوست.
+خوله ازموينې يي راويست او جيل ته يي وردننه کړ. ده په جيل کې هم لوست وايه اوله همغه ځايه يي ازموينې ورکړې ځکه يوازې دازموينې په ورځ يي اجازه ورکوله چې له جيله ازموينې ته ورشي اوبيرته به يې جيل ته راوست.
 
 له جيل نه وروسته ښاغلى خټک دپيښورپوهنوتون ته بريالى شو. بيا يي ونيواوداځل يي دمچ مشهورجيل ته بوت خو بيا ېې هم لوستونه مخکې وړل اوله همغه ځايه يې دفلسفې اوارواپوهنې ازموينه ورکړه .
 
@@ -14,6 +16,7 @@
 
 د ښوونکي دنده يې ترسره کړې ده اوپه پيښورراډيوکې يي هم کارکاوه پروگرامونه به يي ليکل.خودژوند ډيره برخه يي لکينې ته ځانگړې کړې ده .اجمل خټک مشهورشاعر اوليکوال دى .
 
+== چاپ شوي آثار ==
 تراوسه يي ١٣ کتابونه او١٨ رسالې چاپ شوي دي .
 
 ځينې کتابونه يي په ارودژبه هم لکلي دي . لومړنى کتاب يي دغيرت چيغه نوميده .
@@ -27,3 +30,4 @@
 
 
 [[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه:پښتانه ليکوالان]]
