--- a/ويکيپېډيا.mw
+++ b/ويکيپېډيا.mw
@@ -526,6 +526,7 @@ Jimmy Wales, the ''de facto'' leader of Wikipedia,<ref name="defactoleader">{{ci
 [[da:Wikipedia]]
 [[de:Wikipedia]]
 [[nv:Wikiibíídiiya]]
+[[en:Wikipedia]]
 [[et:Vikipeedia]]
 [[el:Βικιπαίδεια]]
 [[es:Wikipedia]]
