*Empty MediaWiki Message*

--- a/ويکيپېډيا.mw
+++ b/ويکيپېډيا.mw
@@ -3,31 +3,13 @@
 د ۲۰۰۷ کال تر ډيسمبر مياشت پورې شته شمار ښودلې چې ويکيپېډيا په ۲۵۳ ژبو کې نژدې ۹،۲۵ ميليونه ليکنې لري، چې که د ويکيپېډيا ټولې ليکنې سره يوځای کړو نو دا ټول به له ۱،۷۴ بيليون وييونو نه هم ډېر لغتونه وي. په ۹ د سېپټمبر، ۲۰۰۷ کال کې د انګريزي ژبې د ويکيپېډيا د ليکنو شمېر له ۲،۰۰۰،۰۰۰ څخه واوښته او تر ۱۲ د مارچ، ۲۰۰۸ کال پورې د انګريزي ويکيپېډيا د ليکنو زېرمه له ۲،۲۷۶،۰۰۰ ليکنو څخه واوښتله چې دغه ټولې ليکنې له ۹۹۰،۰۰۰،۰۰۰ وييونو<ref name="ListOfWikipedias">{{cite web | url = http://meta.wikimedia.org/wiki/List_of_Wikipedias | title = List of Wikipedias | publisher = [[Wikipedia:Meta|Meta-Wiki]] | '''accessdate = 2007-07-12 | date = [[2007-07-12]]}}</ref> او لغتونو نه جوړ شوي. د ويکيپېډيا ليکنې په ټوله نړۍ کې د ويکيپېډيا د داوطلبو کارونکو لخوا په ګډه توګه ليکل شوي او هرڅوک چې د انټرنټ آسانتياوې لري کولای شي چې د دغه پوهنغونډ په نژدې ټولو ليکنو کې سمون راولي. ويکيپېډيا په ډېر يو لنډ وخت کې خپل ځان نړېوالو ته وروپېژاندلی او ښه نوم يې ويستلی<ref name="AlexaStats">{{cite web | url = http://www.alexa.com/data/details/traffic_details/wikipedia.org?range=5y&size=large&y=t | title = Five-year traffic statistics for wikipedia.org | publisher = [[Alexa Internet]] | accessdate = 2007-01-29 }}</ref> چې اوسمهال په نړېواله کچه د نړۍ په ۱۰ ډېرو کتونکو ويبځاييونو کې شمېرل کېږي.
 <ref name=AlexaTop500 />
 
-[[Criticism of Wikipedia|Critics]] target its [[systemic bias]] and inconsistencies,<ref name="SangerElitism" /> and for favoring [[consensus]] over [[credential]]s in its editorial process.<ref name="AcademiaAndWikipedia">{{cite web | url = http://many.corante.com/archives/2005/01/04/academia_and_wikipedia.php | title = Academia and Wikipedia | accessdate = 2007-02-11 | author = [[Danah Boyd]] | publisher = Many-to-Many | date = [[2005-01-04]] }}</ref> As a result, contemporary popular icons with relatively low overall significance (TV hosts, pop singers etc.) are often more prominently featured than historical figures with high global importance. [[Reliability of Wikipedia|Wikipedia's reliability and accuracy]] is also an issue.<ref name="Who">{{cite web | url = http://www.guardian.co.uk/technology/2004/oct/26/g2.onlinesupplement | title = Who knows? | accessdate = 2007-02-11 | author = Simon Waldman | publisher = ''[[The Guardian]]'' | date = [[2004-10-26]] }}</ref> 
-Other criticisms are centered on its susceptibility to [[vandalism]] and the addition of spurious or unverified information<ref name="DeathByWikipedia" />. Scholarly work suggests that vandalism is generally short-lived.<ref name="MIT_IBM_study">{{cite paper | title = Studying Cooperation and Conflict between Authors with History Flow Visualizations | format = [[Portable Document Format|PDF]] | accessdate = 2007-01-24 | url = http://alumni.media.mit.edu/~fviegas/papers/history_flow.pdf }}</ref><ref name="CreatingDestroyingAndRestoringValue">{{cite journal
- | author =Reid Priedhorsky, Jilin Chen, Shyong (Tony) K. Lam, Katherine Panciera, Loren Terveen, John Riedl
- | title =Creating, Destroying, and Restoring Value in Wikipedia
- | journal =[[Association for Computing Machinery]] GROUP '07 conference proceedings
- | location =Sanibel Island, Florida, USA.
- |date=2007-11-04
- | url =http://www-users.cs.umn.edu/~reid/papers/group282-priedhorsky.pdf
- | accessdate =2007-10-13}}</ref>
+[[Criticism of Wikipedia|Critics of Wikipedia]] target its [[systemic bias]] and inconsistencies<ref name="SangerElitism" /> and its policy of favoring [[consensus]] over [[credential]]s in its editorial process.<ref name="AcademiaAndWikipedia">{{cite web|author=Danah Boyd|url=http://many.corante.com/archives/2005/01/04/academia_and_wikipedia.php|title=Academia and Wikipedia|work=[[Many 2 Many]]: A Group [[Blog|Weblog]] on Social Software|format=[[World Wide Web|Web]]|publisher=[[Corante (company)|Corante]]|date=2005-01-04|accessdate=2008-12-18|quote=[The author, Danah Boyd, describes herself as] an expert on social media[,] ... a doctoral student in the School of Information at the [[University of California - Berkeley]][,] and a fellow at the [[Harvard University]] [[Berkman Center for Internet and Society]] [at [[Harvard Law School]].]}}</ref> [[Reliability of Wikipedia|Wikipedia's reliability and accuracy]] are also an issue.<ref name="Who">{{cite web | url = http://www.guardian.co.uk/technology/2004/oct/26/g2.onlinesupplement | title = Who knows?|author=Simon Waldman|work=[[Guardian.co.uk]]|date=2004-10-26 | accessdate = 2007-02-11}}</ref> Other criticisms are centered on its susceptibility to [[vandalism]] and the addition of spurious or unverified information.<ref name="DeathByWikipedia" /> Scholarly work suggests that vandalism is generally short-lived.<ref name="MIT_IBM_study">{{cite journal|author=Fernanda B. Viégas, Martin Wattenberg, and Kushal Dave|url=http://alumni.media.mit.edu/~fviegas/papers/history_flow.pdf|title=Studying Cooperation and Conflict between Authors with History Flow Visualizations|journal=Proceedings of the [[CHI (conference)|ACM Conference on Human Factors in Computing Systems (CHI)]]|publisher=[[ACM]] [[SIGCHI]]|id=ISBN 1-58113-702-8|pages=575–582|location=[[Vienna, Austria]]|year=2004|format=PDF|accessdate=2007-01-24}}</ref><ref name="CreatingDestroyingAndRestoringValue">{{cite journal|author=Reid Priedhorsky, Jilin Chen, Shyong (Tony) K. Lam, Katherine Panciera, Loren Terveen, and John Riedl (GroupLens Research, Department of Computer Science and Engineering, [[University of Minnesota]])|title =Creating, Destroying, and Restoring Value in Wikipedia|journal =[[Association for Computing Machinery]] GROUP '07 conference proceedings|location =[[Sanibel Island]], [[Florida]]|date=2007-11-04|url =http://www-users.cs.umn.edu/~reid/papers/group282-priedhorsky.pdf|format=PDF|accessdate=2007-10-13}}</ref>
 
-In addition to being an encyclopedic reference, Wikipedia has received major media attention as an online source of breaking news as it is constantly updated.<ref>{{cite news
-| url = http://www10.nytimes.com/2007/07/01/magazine/01WIKIPEDIA-t.html?_r=5&pagewanted=print&oref=slogin&oref=slogin&oref=slogin&oref=slogin
-| title = All the News That’s Fit to Print Out
-| author = Jonathan Dee
-| publisher = The New York Times Magazine
-|date=2007-07-01
-|accessdate=2007-12-01}}</ref><ref>{{cite journal
- | author = Andrew Lih
- | title = Wikipedia as Participatory Journalism: Reliable Sources? Metrics for evaluating collaborative media as a news resource
- | journal = 5th International Symposium on Online Journalism
- | location = University of Texas at Austin
- |date=04-16-2004
- | url = http://jmsc.hku.hk/faculty/alih/publications/utaustin-2004-wikipedia-rc2.pdf
- | accessdate =2007-10-13}}</ref>
-When ''[[Time (magazine)|Time Magazine]]'' recognized "[[You (Time Person of the Year)|You]]" as their ''[[Time Person of the Year|Person of the Year]]'' 2006, praising the accelerating success of on-line collaboration and interaction by millions of users around the world, Wikipedia was the first particular "[[Web 2.0]]" service mentioned, followed by [[YouTube]] and [[MySpace]].<ref name="You">{{cite news| date=[[2006-12-13]]| url= http://www.time.com/time/magazine/article/0,9171,1569514,00.html |title= Time's Person of the Year: You |publisher= ''[[Time (magazine)|Time]]''}}</ref>
+Jonathan Dee, of ''[[The New York Times]]'',<ref name=Dee>{{cite news
+| url = http://www.nytimes.com/2007/07/01/magazine/01WIKIPEDIA-t.html
+| title = All the News That's Fit to Print Out|author=Jonathan Dee|publisher = The New York Times Magazine|date=2007-07-01|accessdate=2007-12-01}}</ref> and Andrew Lih, in the ''5th International Symposium on Online Journalism'',<ref name=Lih>{{cite journal|author=Andrew Lih|title=Wikipedia as Participatory Journalism: Reliable Sources? Metrics for Evaluating Collaborative Media as a News Resource|journal=5th International Symposium on Online Journalism|location=[[University of Texas - Austin]]|date=2004-04-16|url=http://jmsc.hku.hk/faculty/alih/publications/utaustin-2004-wikipedia-rc2.pdf|format=PDF|accessdate=2007-10-13}}</ref> have cited the importance of Wikipedia not only as an encyclopedic reference but also as a frequently-updated news resource.
+
+When ''[[Time (magazine)|Time]]'' magazine recognized "[[You (Time Person of the Year)|You]]" as its [[Time Person of the Year|"Person of the Year for 2006"]], acknowledging the accelerating success of online collaboration and interaction by millions of users around the world, it cited Wikipedia as one of three examples of "[[Web 2.0]]" services, along with [[YouTube]] and [[MySpace]].<ref name=Time2006>{{cite news| date=2006-12-13| url= http://www.time.com/time/magazine/article/0,9171,1569514,00.html |title= Time's Person of the Year: You |work=TIME |publisher=Time, Inc |accessdate=2008-12-26}}</ref>
 
 ==تاريخ==
 {{main|د ويکيپېډيا تاريخ}}
