--- a/مالاوي.mw
+++ b/مالاوي.mw
@@ -370,7 +370,7 @@ Malawi's official holidays include New Year's Day; Chilembwe Day (15 Jan.); Mart
 [[el:Μαλάουι]]
 [[en:Malawi]]
 [[eo:Malavio]]
-[[es:Malawi]]
+[[es:Malaui]]
 [[et:Malawi]]
 [[eu:Malawi]]
 [[fa:مالاوی]]
